Fixed virtual keyboard overlap bug.

--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@
 	font-weight: normal;
 	font-variant: normal;
 	font-style: normal;
-	width: 100%;
+	width:100%;
 	height: 100%;
 }
 
@@ -226,7 +226,6 @@ h1.title.tandc {
 }
 
 .OuterTOCheck{
-	text-align: center;
 	line-height: 50px;
 	font-size: .95em;
 }
@@ -262,15 +261,22 @@ h1.title.tandc {
 }
 
 .TOCCheck {
-	width: 400px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	width: auto;
 	margin: auto;
 	position: relative;
+	display: inline-block;
+	left: 50%;
+	margin-left: -203px;
 }
+
 .TOCCheck label {
 	cursor: pointer;
-	display: block;
 	line-height: 50px;
 	height: 50px;
+	padding-left: 26px;
 }
 
 .table-view-cell{
@@ -401,11 +407,11 @@ h1.title.tandc {
 	display:none; !important;
 }
 
-@media(max-height: 450px) {
-	.bar-tab{
-		display: none;
-	}
-}
+/*@media(max-height: 450px) {*/
+/*.bar-tab{*/
+/*display: none;*/
+/*}*/
+/*}*/
 
 .bar-tab {
 	height: 90px;
@@ -599,8 +605,8 @@ video {
 	}
 
 	.TOCCheck {
-		width: 282px;
-		margin: auto;
+		left:50%;
+		margin-left: -337px;
 		position: relative;
 	}
 
@@ -614,7 +620,6 @@ video {
 
 	.TOCCheck label {
 		cursor: pointer;
-		display: block;
 		line-height: 50px;
 		height: 50px;
 	}
@@ -628,5 +633,3 @@ video {
 		width: 80px;
 	}
 }
-
-
